changed pretty.css and entries.js to view.css and view.js

--- a/supplement-journal/view.html
+++ b/supplement-journal/view.html
@@ -1,12 +1,12 @@
 <DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="pretty.css">
+<link rel="stylesheet" type="text/css" href="view.css">
 <title>Journal Entries</title>
 </head>
 <body>
 <div id = "entries">a</div>
-<script src = "entries.js"></script>
+<script src = "view.js"></script>
 </body>
 </html>
 
