--- a/supplement-journal/input.html
+++ b/supplement-journal/input.html
@@ -22,7 +22,7 @@
 
 	<button type = "button" id = "submit">Submit</button>
 
-	<a href ="/Users/ilianneykov/Desktop/practice_js/Supplements/view.html" >See Entries</a> //link will not work, must be on localhost
+	<a href ="/Users/ilianneykov/Desktop/practice_js/Supplements/view.html" >See Entries</a>
 	</body>
 	</html>
 
