--- a/AJAX-practice/send.html
+++ b/AJAX-practice/send.html
@@ -4,8 +4,8 @@
 <title>test</title>
 </head>
 <body>
-<p id = "test"> </p>
-<script src = "test.js"></script>
+<p>ii</p>
+<script src = "send.js"></script>
 </body>
 </html>
 
