--- a/word-finder/testPage.html
+++ b/word-finder/testPage.html
@@ -3,15 +3,16 @@
 <head>
 <title>test</title>
 </title>
+</head>
 <body>
 <h2>Sample Text Here</h2>
+
 <p>The uprising in eastern Herzegovina on 23 June 1941 was a Serb rebellion against the authorities of the Independent State of Croatia (NDH), an Axis puppet state established during World War II on the territory of the defeated Kingdom of Yugoslavia. As the NDH imposed its authority, members of the fascist Ustaše ruling party had begun a campaign of persecution against Serbs throughout the country. In eastern Herzegovina, the Ustaše perpetrated a series of massacres and attacks against the majority Serb population commencing in the first week of June, igniting a series of spontaneous clashes between the NDH authorities and groups of Serbs. On 23 June, the day after the start of the German invasion of the Soviet Union, sporadic revolts erupted into mass rebellion, triggered by Ustaše persecution, Serb solidarity with the Russian people, hatred and fear of the NDH authorities, and other factors. The Italians intervened after several setbacks for the NDH forces, who regained full control of all towns and transport routes by 7 July</p>
 
 <table>
 	<tr><th>the racism,</th></tr>
 		<td> and oh the sexism!</td>
 </table>
-
 <ul>
 	<li><p>cisgender</p></li>
 </ul>	
