comments and close button added

--- a/word-finder/testPage.html
+++ b/word-finder/testPage.html
@@ -15,6 +15,7 @@
 </table>
 <ul>
 	<li><p>cisgender</p></li>
+	<li>toxic masculinity</li>
 </ul>	
 
 <h3> cisgender bastards lacking diversity </h3>
