supplement changed, food and coffee added

--- a/supplement-journal/input.html
+++ b/supplement-journal/input.html
@@ -9,20 +9,25 @@
 <form name="steve">
 
 <h4><script>document.write(new Date())</script> </h4>
-	<p>D3_1000iu</p><input type="text" name="input" id ="D3_1000iu"><br>
-	<p>K2_100mcg</p><input type="text" name="input" id="K2_100mcg"><br>
-	<p>B6_B12_Folic</p><input type="text" name="input" id="B6_B12_Folic"><br>
-	<p>DHA_280mcg_EPA_420mcg</p><input type="text" name="input" id="DHA_280mcg_EPA_420mcg"><br>
-	<p>Magnesium_x</p><input type="text" name="input" id="Magnesium_x"><br>
+	<p>D3</p><input type="text" name="input" id ="D3"><br>
+	<p>Tumeric</p><input type="text" name="input" id="tumeric"><br>
+	<p>B Complex</p><input type="text" name="input" id="bComplex"><br>
+	<p>Fish Oil</p><input type="text" name="input" id="fish"><br>
+	<p>Magnesium</p><input type="text" name="input" id="Mag"><br>
+	<p>Vitamin C</p><input type="text" name="input" id="vitC"><br>
+	<p>Vitamin E</p><input type="text" name="input" id="vitE"><br>
+	<p>Iron</p><input type="text" name="input" id="iron"><br>	
+	<p>Food</p><input type="text" name="input" id="food"><br>	
+	<p>Coffee</p><input type="text" name="input" id="coffee"><br>
 	<p>Bottled water</p><input type="text" name="input" id="bottled"><br>
 	<p>Tap Water</p><input type="text" name="input" id="tap"><br>
 	<p>Alcohol</p><input type="text" name="input" id="alcohol"><br>
-	<p>Additional Notes</p><input type="text" name="input" id="notes"><br>
+	<p>Additional Notes</p><input type="text" name="input" id="notes"><br><br>
 
 
 	<button type = "button" id = "submit">Submit</button>
 
-	<a href ="/Users/ilianneykov/Desktop/practice_js/Supplements/view.html" >See Entries</a>
+	<a href ="/Users/macowner/Desktop/Misc/Supplements/js-practice/supplement-journal/view.html" >See Entries</a>
 	</body>
 	</html>
 
