bootstrapped input page

--- a/supplement-journal/view.html
+++ b/supplement-journal/view.html
@@ -4,9 +4,11 @@
 <link rel="stylesheet" type="text/css" href="view.css">
 <title>Journal Entries</title>
 </head>
-<body>
-<div id = "entries">a</div>
-<script src = "view.js"></script>
+<body style="background-color:#f0f0f5">
+<div class="container" >
+	<div id = "entries">a</div>
+	<script src = "view.js"></script>
+</div>
 </body>
 </html>
 
