--- a/supplement-journal/input.html
+++ b/supplement-journal/input.html
@@ -1,33 +1,100 @@
 <DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<title>Food and Supplement Journal</title>
 </head>
-<body>
-<script src = inputs.js><script>
+<body style="background-color:#f0f0f5">
+<script src = inputs.js></script>
+<div class="container">
+<div class="row">
+	<div class="col-md-1"></div>
+	<div class="col-md-11">
+		
+	<br><h2>Food Journal</h2><br>
+
+		<form name="steve">
+
+			<form class="form-horizontal">
+				<div class="form-group">
+					<label for="D3">D3</label>
+					<input type="text" name="input" id ="D3" class="form-control">
+				</div>	
+
+				<div class="form-group">	
+					<label for="Tumeric">Tumeric</label>
+					<input type="text" name="input" id="tumeric" class="form-control">
+				</div>
+			
+				<div class="form-group">
+					<label for="B Complex">B Complex</label>
+					<input type="text" name="input" id="bComplex" class="form-control">
+				</div>
+				
+				<div class="form-group">	
+					<label for="Fish Oil">Fish Oil</label>
+					<input type="text" name="input" id="fish" class="form-control">
+				</div>
+
+				<div class="form-group">
+					<label for="Magnesium">Magnesium</label>
+					<input type="text" name="input" id="Mag" class="form-control">
+				</div>
+
+				<div class="form-group">	
+					<label for="Vitamin C">Vitamin C</label>
+					<input type="text" name="input" id="vitC" class="form-control">
+				</div>
+
+				<div class="form-group">	
+					<label for="Vitamin E">Vitamin E</label>
+					<input type="text" name="input" id="vitE" class="form-control">
+				</div>
+
+				<div class="form-group">
+					<label for="Iron:">Iron</label>
+					<input type="text" name="input" id="iron" class="form-control">
+				</div>
+
+				<div class="form-group">
+					<label for="Food:">Food</label>
+					<input type="text" name="input" id="food" class="form-control">
+				</div>
+				
+				<div class="form-group">
+					<label for="Coffee">Coffee</label>
+					<input type="text" name="input" id="coffee" class="form-control">
+				</div>
+
+				<div class="form-group">
+					<label for="Bottled Water">Bottled water</label>
+					<input type="text" name="input" id="bottled" class="form-control">
+				</div>
+
+				<div class="form-group">
+					<label for="Tap Water">Tap Water</label>
+					<input type="text" name="input" id="tap" class="form-control">
+				</div>
+
+				<div class="form-group">
+					<label for="Alcohol">Alcohol</label>
+					<input type="text" name="input" id="alcohol" class="form-control">
+				</div>
+
+				<div class="form-group">
+					<label for="Notes">Additional Notes</label>
+					<input type="text" name="input" id="notes" class="form-control"><br>
+				</div>
+
+				<button id="submit" type="button" class="btn btn-dark">Submit</button>	
 
 
-<form name="steve">
+				<a href ="/Users/macowner/Desktop/Misc/Supplements/js-practice/supplement-journal/view.html" class="btn btn-secondary">See Entries</a>
+		</form>
+	</div>
+</div>
+</div>
 
-<h4><script>document.write(new Date())</script> </h4>
-	<p>D3</p><input type="text" name="input" id ="D3"><br>
-	<p>Tumeric</p><input type="text" name="input" id="tumeric"><br>
-	<p>B Complex</p><input type="text" name="input" id="bComplex"><br>
-	<p>Fish Oil</p><input type="text" name="input" id="fish"><br>
-	<p>Magnesium</p><input type="text" name="input" id="Mag"><br>
-	<p>Vitamin C</p><input type="text" name="input" id="vitC"><br>
-	<p>Vitamin E</p><input type="text" name="input" id="vitE"><br>
-	<p>Iron</p><input type="text" name="input" id="iron"><br>	
-	<p>Food</p><input type="text" name="input" id="food"><br>	
-	<p>Coffee</p><input type="text" name="input" id="coffee"><br>
-	<p>Bottled water</p><input type="text" name="input" id="bottled"><br>
-	<p>Tap Water</p><input type="text" name="input" id="tap"><br>
-	<p>Alcohol</p><input type="text" name="input" id="alcohol"><br>
-	<p>Additional Notes</p><input type="text" name="input" id="notes"><br><br>
-
-
-	<button type = "button" id = "submit">Submit</button>
-
-	<a href ="/Users/macowner/Desktop/Misc/Supplements/js-practice/supplement-journal/view.html" >See Entries</a>
-	</body>
-	</html>
+</body>
+</html>
 
