--- a/supplement-journal/view.html
+++ b/supplement-journal/view.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="view.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <title>Journal Entries</title>
 </head>
 <body style="background-color:#f0f0f5">
 <div class="container" >
-	<div id = "entries">a</div>
+	<ul id = "entries" class="list-group"></ul>
 	<script src = "view.js"></script>
 </div>
 </body>
