--- a/supplement-journal/input.html
+++ b/supplement-journal/input.html
@@ -82,9 +82,16 @@
 				</div>
 
 				<div class="form-group">
+					<label for="Exercise">Exercise</label>
+					<input type="text" name="input" id="exercise" class="form-control">
+				</div>
+
+
+				<div class="form-group">
 					<label for="Notes">Additional Notes</label>
 					<input type="text" name="input" id="notes" class="form-control"><br>
 				</div>
+
 
 				<button id="submit" type="button" class="btn btn-dark">Submit</button>	
 
