--- a/supplement-journal/input.html
+++ b/supplement-journal/input.html
@@ -86,6 +86,10 @@
 					<input type="text" name="input" id="exercise" class="form-control">
 				</div>
 
+				<div class="form-group">
+					<label for="Cycle">Cycle</label>
+					<input type="text" name="input" id="cycle" class="form-control">
+				</div>
 
 				<div class="form-group">
 					<label for="Notes">Additional Notes</label>
